--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,9 @@
 ---
 ---
 
+$header-heading-color: #fff !default;
+$header-bg-color: #8404FC !default;
+$header-bg-color-secondary: #0905FC !default;
+
 @import "{{ site.theme }}";
+fe
