--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,6 @@
 
 $header-heading-color: #fff !default;
 $header-bg-color: #0905FC !default;
-$header-bg-color-secondary: #8404FC !default;
+$header-bg-color-secondary: #5b05fc !default;
 
 @import "{{ site.theme }}";
