--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 $header-heading-color: #fff !default;
-$header-bg-color: #0905FC !default;
-$header-bg-color-secondary: #5b05fc !default;
+$header-bg-color: #5b05fc !default;
+$header-bg-color-secondary: #8404FC !default;
 
 @import "{{ site.theme }}";
