--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,4 +5,6 @@ $header-heading-color: #fff !default;
 $header-bg-color: #5b05fc !default;
 $header-bg-color-secondary: #8404FC !default;
 
+$section-headings-color: #8404FC !default;
+
 @import "{{ site.theme }}";
