--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <title>Ezpezialet | El primer bot de discord en català</title>
     <meta charset="UTF-8">
 
 {% seo %}
