--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,9 @@ $header-bg-color-secondary: #8404FC !default;
 
 $section-headings-color: #8404FC !default;
 
+$code-bg-color: #4a4b4c !default;
+$code-text-color: #567482 !default;
+
 .dark-mode {
   background-color: black;
   color: white;
