--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@ $code-text-color: #567482 !default;
 
 .dark-mode {
   $code-bg-color: #4a4b4c !default;
+  $border-color: #565759 !default;
   background-color: black;
   color: white;
 }
