--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,11 +7,9 @@ $header-bg-color-secondary: #8404FC !default;
 
 $section-headings-color: #8404FC !default;
 
-$code-text-color: #567482 !default;
-
 .dark-mode {
-  $code-bg-color: #4a4b4c !default;
-  $border-color: #565759 !default;
+  $code-bg-color: #4a4b4c;
+  $border-color: #565759;
   background-color: black;
   color: white;
 }
