--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@ $header-bg-color: #5b05fc !default;
 $header-bg-color-secondary: #8404FC !default;
 
 $section-headings-color: #8404FC !default;
+$body-link-color: #1e89bf !default;
 
 .dark-mode {
   $code-bg-color: #4a4b4c;
