--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,10 +7,10 @@ $header-bg-color-secondary: #8404FC !default;
 
 $section-headings-color: #8404FC !default;
 $body-link-color: #1e89bf !default;
+$code-bg-color: #6e768166 !default;
+
 
 .dark-mode {
-  $code-bg-color: #4a4b4c;
-  $border-color: #565759;
   background-color: black;
   color: white;
 }
