--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@ $header-bg-color-secondary: #8404FC !default;
 $section-headings-color: #8404FC !default;
 $body-link-color: #1e89bf !default;
 $code-bg-color: #6e768166 !default;
+$code-text-color: #c9d1d9 !defailt;
 
 
 .dark-mode {
