--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,69 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+    <div class="core_features">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <img src="img/leader.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 mt-sm-20">
+              <h1> MONEDES </h1>
+              <h3>Cada persona del servidor amb el Cata<b>BOT</b> té una quantitat de monedes per jugar!<br>
+                Es poden executar comandes per aposar i retar als teus amics!<br>
+                També es pot pujar de nivell i millorar el teu perfil!</h3>
+            </div>
+          </div>
 
+
+          <div class="section-top-border text-right">
+            <div class="row">
+              <div class="col-md-6">
+                <h1> ENTRETENIMENT </h1>
+                <h3 class="text-right">Tot tipus d'entreteniment podras trobar al Cata<b>BOT</b>!
+                  Desde traductors, memes, fotos de gats i gossos, una pokedex, saber lo gay que ets, la
+                  mesura del teu penis, fer que el bot digui el que vulguis, les estadistiques del covid, i molt més!
+                </h3>
+              </div>
+              <div class="col-md-6">
+                <img src="img/pokedex.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <img src="img/kick.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6 mt-sm-20">
+              <h1> MODERACIÓ </h1>
+              <h3>Si ets administrador del servidor, el Cata<b>BOT</b> t'ofereix una gran diversitat de comandes
+                de moderació!
+                Es pot banejar a qui es necessiti, el mateix amb el kick. Inclús té una comanda per esborrar
+                fins a 100 missatges!
+              </h3>
+            </div>
+          </div>
+
+          <div class="section-top-border text-right">
+            <div class="row">
+              <div class="col-md-7">
+                <h1> SERVIDOR OFICIAL </h1>
+                <h3 class="text-right">Entra ja al servidor oficial del Cata<b>BOT</b>!
+                  Podràs parlar amb els devs, moderadors i gent espectacular que hi ha aqui dins! Prova el
+                  Cata<b>BOT</b> en el servidor oficial o al teu servidor privat amb el link d'invitació!
+                </h3>
+              </div>
+              <div class="col-md-5">
+                <iframe src="https://discordapp.com/widget?id=804473669556109333&amp;theme=dark" width="350" height="500" allowtransparency="true" frameborder="0">
+                </iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
