--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,13 +35,13 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <img src="img/leader.png" alt="" class="img-fluid">
+              <img src="https://media.discordapp.net/attachments/919329630761148428/919330574861205534/Captura_de_pantalla_2021-12-11_a_las_21.50.52.png">
             </div>
             <div class="col-md-6 mt-sm-20">
-              <h1> MONEDES </h1>
-              <h3>Cada persona del servidor amb el Cata<b>BOT</b> té una quantitat de monedes per jugar!<br>
-                Es poden executar comandes per aposar i retar als teus amics!<br>
-                També es pot pujar de nivell i millorar el teu perfil!</h3>
+              <h3>Moderació</h3>
+              <p>Amb l'<b>Ezpezialet</b> pots moderar el teu servidor d'una manera fàcil.<br>
+                Pots borrar missatges a la vegada, banejar a la gent i expulsar-la.<br>
+                Les comandes són fàcils de fer servir i molt intuitives!</p>
             </div>
           </div>
 
