--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,17 @@
       {% endif %}
     </header>
 
+    <table style=".tablelines">
+  <tr>
+    <td><h2>Moderació</h2><p style="font-size: 1.3em;">Amb l'<b>Ezpezialet</b> pots moderar el teu servidor d'una manera fàcil.<br>
+                Pots borrar missatges a la vegada, banejar a la gent i expulsar-la.<br>
+                Les comandes són fàcils de fer servir i molt intuitives!</p></td>
+    <td><img src="https://cdn.discordapp.com/attachments/919329630761148428/919338541941657630/unknown.png" alt="Imatge de zz!ban"></td>
+  </tr>
+  <tr>
+    <td><img src="https://media.discordapp.net/attachments/919329630761148428/919330574861205534/Captura_de_pantalla_2021-12-11_a_las_21.50.52.png"></td>
+    <td>oderacio bla bla bla<br>blablabalabalalbala<br>sadgfabshdjfasuvdfhbjshfbjds</td>
+</table>
     <main id="content" class="main-content" role="main">
       {{ content }}
     
