--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       {% endif %}
     </header>
 
-    <table style=".tablelines">
+    <table>
   <tr>
     <td><h2>Moderació</h2><p style="font-size: 1.3em;">Amb l'<b>Ezpezialet</b> pots moderar el teu servidor d'una manera fàcil.<br>
                 Pots borrar missatges a la vegada, banejar a la gent i expulsar-la.<br>
