--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <table>
   <tr>
-    <td><h2>Moderació</h2><p style="font-size: 1.3em;">Amb l'<b>Ezpezialet</b> pots moderar el teu servidor d'una manera fàcil.<br>
+    <td><h2>Moderació</h2><p>Amb l'<b>Ezpezialet</b> pots moderar el teu servidor d'una manera fàcil.<br>
                 Pots borrar missatges a la vegada, banejar a la gent i expulsar-la.<br>
                 Les comandes són fàcils de fer servir i molt intuitives!</p></td>
     <td><img src="https://cdn.discordapp.com/attachments/919329630761148428/919338541941657630/unknown.png" alt="Imatge de zz!ban"></td>
