--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <title>Ezpezialet | El primer bot de discord en català</title>
-    <link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
+    <link rel="shortcut icon" type="image/x-icon" href="gh-pages/_includes/favicon.ico">
     <meta charset="UTF-8">
 
 {% seo %}
