--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">Veure a GitHub</a>
-        <a href="#" onClick="https://discord.com/oauth2/authorize?client_id=553883586210562060&permissions=423528627270&scope=bot%20applications.commands','MyWindow','width=600,height=300'); return false;">Afegir Bot</a>
+        <a href="#" onClick="MyWindow=window.open('https://discord.com/oauth2/authorize?client_id=553883586210562060&permissions=423528627270&scope=bot%20applications.commands','MyWindow','width=600,height=300'); return false;" class="btn">Afegir Bot</a>
       {% endif %}
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
