--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <table>
+      <table border="0">
         <tr>
           <td>
             <h2>Moderació</h2>
